# zwm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: window_manager.hpp
src/: main.cpp  window_manager.cpp
